--- a/accountapp/templates/accountapp/signup.html
+++ b/accountapp/templates/accountapp/signup.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-    <div style="width: 800px; margin: 0 auto; ">
-      <h3>🐱‍🐉 Sign Up</h3>
+    <div style="width: 400px; margin: 0 auto; ">
+      <h3>회원가입</h3>
       <br>
       <form method="post" action="">
           {% csrf_token %}
