--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,9 @@
         <a href="{% url 'articleapp:list' %}">
             <span>서평게시판</span>
         </a>
-
+        <a href="{% url 'projectapp:list' %}">
+            <span>카테고리</span>
+        </a>
         {% if not user.is_authenticated %}
         <a href="{% url 'accountapp:signup' %}">
             <span>회원가입</span>
