--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -15,6 +15,11 @@
             </h5>
         </div>
 
+        <!--- <a href="{% url 'projectapp:delete' pk=target_project.pk %}"
+            class="btn btn-danger rounded-pill col-3">
+                Delete
+            </a>--->
+
         <div>
             {% include 'snippets/list_fragment.html' with article_list=object_list %}
         </div>
