--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -19,10 +19,10 @@
     }
 
     .container img {
-      width: 7rem;
-      height: 7rem;
+      width: 10rem;
+      height: 10rem;
       object-fit: cover;
-      border-radius: 1rem;
+      border-radius: 5rem;
     }
 
 </style>
@@ -41,13 +41,12 @@
   </div>
   {% endif %}
 
-  {% include 'snippets/pagination.html' with page_obj=page_obj %}
 
-    <div style="text-align: center">
+    <!--<div style="text-align: center">
       <a href="{% url 'projectapp:create' %}" class="btn btn-dark rounded-pill mt-3 mb-3 px-3">
         Create Project
       </a>
-    </div>
+    </div>-->
 
 
 {% endblock %}
